--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -1,5 +1,5 @@
 <section class="product-section">
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>№</th>
@@ -26,6 +26,8 @@
         <th>Маржинальність продукту</th>
         <th>Ніша(Тематика) продукту</th>
         <th>Бали продукту</th>
+        <th class="table-border"></th>
+        <th colspan="2">КНОПКИ</th>
       </tr>
     </thead>
     <tbody></tbody>
