--- a/src/css/layouts/product-list.css
+++ b/src/css/layouts/product-list.css
@@ -7,12 +7,12 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  border: 5px solid black;
+  border: 5px solid rgba(0, 0, 0, 0.562);
 }
 
 thead,
 tbody {
-  border: 4px solid black;
+  border: 4px solid rgba(0, 0, 0, 0.386);
 }
 
 th {
@@ -21,22 +21,23 @@ th {
   font-weight: bold; /* Жирный шрифт */
   padding: 10px; /* Внутренние отступы */
   border: 1px solid #ddd; /* Границы ячеек заголовков */
+  text-align: center;
+  width: fit-content;
   min-width: 200px;
+  vertical-align: middle;
 }
 
 td {
   padding: 8px;
   border: 1px solid #ddd;
+  max-width: 200px;
+  overflow: hidden;
+  max-height: 10px;
+  text-align: center;
+  word-wrap: unset;
+  vertical-align: middle;
 }
 
 tr:nth-child(even) {
   background-color: #f2f2f2; /* Цвет фона четных строк */
-}
-
-.table-border {
-  min-width: 4px;
-  width: 2px;
-  padding: 0;
-  margin: 0;
-  background-color: black;
 }
