--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -1,5 +1,5 @@
 <section class="product-section">
-  <table class="table">
+  <table id="TableToExport" class="table">
     <thead>
       <tr>
         <th>№</th>
@@ -32,4 +32,9 @@
     </thead>
     <tbody></tbody>
   </table>
+
+  <form class="box product-form js-save-form" style="width: 300px">
+    <input type="file" />
+    <button>Save To File</button>
+  </form>
 </section>
