--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -33,8 +33,15 @@
     <tbody></tbody>
   </table>
 
-  <form class="box product-form js-save-form" style="width: 300px">
-    <input type="file" />
-    <button>Save To File</button>
-  </form>
+  <div>
+    <form class="box product-form js-load-form" style="width: 300px">
+      <input type="file" />
+      <button>Load File</button>
+    </form>
+
+    <form class="box product-form js-save-form" style="width: 300px">
+      <input type="file" />
+      <button>Save To File</button>
+    </form>
+  </div>
 </section>
