--- a/src/css/layouts/product-list.css
+++ b/src/css/layouts/product-list.css
@@ -39,5 +39,15 @@ td {
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2; /* Цвет фона четных строк */
+  background-color: #d2d1d1; /* Цвет фона четных строк */
+}
+
+td.table-border,
+th.table-border {
+  max-width: 2px !important;
+  min-width: 2px !important;
+  width: 2px !important;
+  border: 1px solid black;
+  padding: 0;
+  margin: 0;
 }
