--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -1,11 +1,12 @@
 <section class="product-section">
+  <load ="./filters.html" />
+
   <table id="TableToExport" class="table">
     <thead>
       <tr>
         <th>№</th>
         <th>Назва продукту</th>
         <th>Джерело, де знайшли продукт</th>
-        <th>Посилання на джерело</th>
         <th>Посилання на сторінку продукта в магазині</th>
         <th>ALIEXPRESS</th>
 
@@ -32,16 +33,4 @@
     </thead>
     <tbody></tbody>
   </table>
-
-  <div>
-    <form class="box product-form js-load-form" style="width: 300px">
-      <input type="file" />
-      <button>Load File</button>
-    </form>
-
-    <form class="box product-form js-save-form" style="width: 300px">
-      <input type="file" />
-      <button>Save To File</button>
-    </form>
-  </div>
 </section>
