--- a/src/partials/form/form.html
+++ b/src/partials/form/form.html
@@ -6,6 +6,6 @@
       <load ="partials/form/additional_info.html" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" name="btn">Submit</button>
   </form>
 </section>
