--- a/src/partials/form/additional_info.html
+++ b/src/partials/form/additional_info.html
@@ -5,9 +5,25 @@
     <hr />
   </div>
 
-  <div class="mb-3">
-    <div class="form-text">Supplier links</div>
-    <input type="text" class="form-control" name="supplier_link" />
+  <div class="flex">
+    <input
+      type="text"
+      class="form-control"
+      name="supplier_link_1"
+      placeholder="Supplier link 1"
+    />
+    <input
+      type="text"
+      class="form-control"
+      name="supplier_link_2"
+      placeholder="Supplier link 1"
+    />
+    <input
+      type="text"
+      class="form-control"
+      name="supplier_link_3"
+      placeholder="Supplier link 1"
+    />
   </div>
 
   <div class="mb-3">
