--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -6,16 +6,16 @@
       <tr>
         <th>№</th>
         <th>Назва продукту</th>
-        <th>Джерело, де знайшли продукт</th>
-        <th>Посилання на сторінку продукта в магазині</th>
-        <th>ALIEXPRESS</th>
+        <th>Джерело</th>
+        <th>Магазин</th>
+        <th>Aliexpress</th>
 
         <th class="table-border"></th>
 
-        <th>Записати кількість замовлень</th>
-        <th>Від 50 або/та Breakout</th>
-        <th>Від 4х зірок на основі 30+ відгуків</th>
-        <th>Наявність як мінімум 5 відео</th>
+        <th>Orders</th>
+        <th>Google</th>
+        <th>Amazon</th>
+        <th>Media</th>
 
         <th class="table-border"></th>
 
@@ -23,9 +23,9 @@
         <th>Вартість продукту</th>
         <th>Вартість продукту (x3)</th>
         <th>Вартість продукту у конкурентів</th>
-        <th>Коментарі по продукту</th>
         <th>Маржинальність продукту</th>
         <th>Ніша(Тематика) продукту</th>
+        <th>Коментарі по продукту</th>
         <th>Бали продукту</th>
         <th class="table-border"></th>
         <th colspan="2">КНОПКИ</th>
