--- a/src/partials/product-list.html
+++ b/src/partials/product-list.html
@@ -25,7 +25,7 @@
         <th>Вартість продукту у конкурентів</th>
         <th>Маржинальність продукту</th>
         <th>Ніша(Тематика) продукту</th>
-        <th>Коментарі по продукту</th>
+        <th class="desc">Коментарі по продукту</th>
         <th>Бали продукту</th>
         <th class="table-border"></th>
         <th colspan="2">КНОПКИ</th>
