--- a/src/partials/form/analytics.html
+++ b/src/partials/form/analytics.html
@@ -17,7 +17,7 @@
 
   <div class="mb-3">
     <div class="form-text">Amazon reviews</div>
-    <input type="number" class="form-control" name="reviews" />
+    <input type="number" class="form-control" name="reviews" step="0.01" />
   </div>
 
   <div class="form-check">
