--- a/src/partials/form/additional_info.html
+++ b/src/partials/form/additional_info.html
@@ -28,12 +28,24 @@
 
   <div class="mb-3">
     <div class="form-text">Supplier price + delivery</div>
-    <input type="number" class="form-control" name="supplier_price" value="0" />
+    <input
+      type="number"
+      class="form-control"
+      name="supplier_price"
+      value="0"
+      step="0.01"
+    />
   </div>
 
   <div class="mb-3">
     <div class="form-text">Sale price (x3)</div>
-    <input type="number" class="form-control" name="sale_price" value="0" />
+    <input
+      type="number"
+      class="form-control"
+      name="sale_price"
+      value="0"
+      step="0.01"
+    />
   </div>
 
   <div class="mb-3">
@@ -43,12 +55,19 @@
       class="form-control"
       name="competitor_price"
       value="0"
+      step="0.01"
     />
   </div>
 
   <div class="mb-3">
     <div class="form-text">Margin</div>
-    <input type="number" class="form-control" name="margin" value="0" />
+    <input
+      type="number"
+      class="form-control"
+      name="margin"
+      value="0"
+      step="0.01"
+    />
   </div>
 
   <div class="mb-3">
